# rclone-crypt-rs

./: .gitignore  Cargo.toml  README.md  write.rs
examples/: data_block_crypto.rs  file_name_crypto.rs  obscuring.rs  path_crypto.rs  seekable_encryption_stream.rs  streamed_decryption.rs  streamed_encryption.rs
src/: cipher.rs  decrypter.rs  eme.rs  encrypter.rs  lib.rs  obscure.rs  tests.rs
src/stream/: mod.rs  read.rs  seekable_write.rs  write.rs
